<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_qrscan">

    <fragment
            android:id="@+id/navigation_support"
            android:name="ru.kazenin.cherry.app.ui.support.SupportFragment"
            android:label="@string/title_support"
            tools:layout="@layout/fragment_support"/>

    <fragment
            android:id="@+id/navigation_receipts"
            android:name="ru.kazenin.cherry.app.ui.receipts.ReceiptsFragment"
            android:label="@string/title_receipts"
            tools:layout="@layout/fragment_receipts_list"/>

    <fragment
            android:id="@+id/navigation_qrscan"
            android:name="ru.kazenin.cherry.app.ui.scan.ScanFragment"
            android:label="@string/title_qrscan"
            tools:layout="@layout/fragment_scan"/>

    <fragment
            android:id="@+id/navigation_bills"
            android:name="ru.kazenin.cherry.app.ui.bills.BillsFragment"
            android:label="@string/title_bills"
            tools:layout="@layout/fragment_bills_list"/>

    <fragment
            android:id="@+id/navigation_profile"
            android:name="ru.kazenin.cherry.app.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile"/>

</navigation>